--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "tailgrids": "^2.2.7"
+    "tailgrids": "^2.2.7",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
